RESOLVED FIXED57480
Inspector doesn't come to the front when a breakpoint is hit in the debugger in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=57480
Summary Inspector doesn't come to the front when a breakpoint is hit in the debugger ...
Adam Roben (:aroben)
Reported 2011-03-30 11:20:05 PDT
To reproduce: 1. Go to http://build.webkit.org/LeaksViewer/ 2. Open the Inspector's debugger and put a breakpoint in LeaksViewer.urlPromptButtonClicked in LeaksViewer.js 3. Click back on the main page 4. Click on the "Fetch leaks" button The breakpoint is hit in the debugger, but the Inspector doesn't come to the front. In WebKit1, it does come to the front.
Attachments
Proposed Change (9.55 KB, patch)
2011-04-20 09:47 PDT, Timothy Hatcher
aroben: review+
timothy: commit-queue-
Adam Roben (:aroben)
Comment 1 2011-03-30 11:20:40 PDT
I think the bug is caused by WebInspectorFrontendClient::bringToFront being unimplemented.
Adam Roben (:aroben)
Comment 2 2011-03-30 11:21:05 PDT
Adam Roben (:aroben)
Comment 3 2011-03-31 06:07:51 PDT
If we implement this, and remove the code that immediately shows the Inspector window when it's first created, then the Inspector window might stop showing up when running run-webkit-tests.
Timothy Hatcher
Comment 4 2011-04-20 09:47:18 PDT
The bringToFront function is only used after the inspector has a window created by the client. The client is required to show it the first time. So we can't remove the code to immediately show it, unless we refactor things.
Timothy Hatcher
Comment 5 2011-04-20 09:47:44 PDT
Created attachment 90353 [details] Proposed Change
WebKit Review Bot
Comment 6 2011-04-20 09:50:20 PDT
Attachment 90353 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 7 2011-04-20 09:51:26 PDT
(In reply to comment #4) > The bringToFront function is only used after the inspector has a window created by the client. The client is required to show it the first time. So we can't remove the code to immediately show it, unless we refactor things. I thought WebKit1 didn't immediately show it, but maybe I'm wrong.
Adam Roben (:aroben)
Comment 8 2011-04-20 09:52:52 PDT
Comment on attachment 90353 [details] Proposed Change View in context: https://bugs.webkit.org/attachment.cgi?id=90353&action=review >> Source/WebKit2/ChangeLog:1 >> +2011-04-20 Timothy Hatcher <timothy@apple.com> > > ChangeLog entry has no bug number [changelog/bugnumber] [5] I think check-webkit-style doesn't know about https: for short bug URLs. You should file a bug about that. > Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm:139 > + // FIXME: support bring to front in docked mode here. You could put this FIXME in the Windows code, too. > Source/WebKit2/UIProcess/win/WebInspectorProxyWin.cpp:197 > +void WebInspectorProxy::platformBringToFront() > +{ > + if (!m_inspectorWindow) > + return; > + > + ASSERT(::IsWindow(m_inspectorWindow)); > + ::ShowWindow(m_inspectorWindow, SW_SHOW); > +} I don't think this will be sufficient on Windows. I think this would do the trick instead: ::SetWindowPos(m_inspectorWindow, HWND_TOP, 0, 0, 0, 0, SWP_SHOWWINDOW | SWP_NOMOVE | SWP_NOSIZE);
Timothy Hatcher
Comment 9 2011-04-21 07:46:35 PDT
I file a bug about the style bot a while ago. Landed in r84424 with Adam's feedback applied.
Note You need to log in before you can comment on or make changes to this bug.