Make the Web Insepctor come to the front when a breakpoint is hit.

<https://webkit.org/b/57480> REGRESSION (WebKit2): Inspector doesn't come to the front when a breakpoint is hit in the debugger
<rdar://problem/9209472>

Reviewed by Adam Roben.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::bringToFront): Added. Call platformBringToFront.
* UIProcess/WebInspectorProxy.h:
* UIProcess/WebInspectorProxy.messages.in: Added BringToFront.
* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformBringToFront): Added. Call orderFront:.
* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::platformBringToFront): Added. Call SetWindowPos.
* WebProcess/WebCoreSupport/WebInspectorFrontendClient.cpp:
(WebKit::WebInspectorFrontendClient::bringToFront): Call WebInspector::bringToFront.
* WebProcess/WebPage/WebInspector.cpp:
(WebKit::WebInspector::bringToFront): Added. Send WebInspectorProxy::BringToFront message.
* WebProcess/WebPage/WebInspector.h: Added bringToFront.

Canonical link: https://commits.webkit.org/74163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84424 268f45cc-cd09-0410-ab3c-d52691b4dbfc