Source/WebKit2/UIProcess/gtk/WebInspectorGtk.cpp
@@ -50,6 +50,11 @@ void WebInspectorProxy::platformClose()
     notImplemented();
 }
 
+void WebInspectorProxy::platformBringToFront()
+{
+    notImplemented();
+}
+
 void WebInspectorProxy::platformInspectedURLChanged(const String&)
 {
     notImplemented();
